# Beyond

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: beyond.rb
assets/: beyondtty.icns
crates/beyonder-acp/: Cargo.toml
crates/beyonder-acp/src/: client.rs  extensions.rs  lib.rs  messages.rs  transport.rs
crates/beyonder-config/: Cargo.toml
crates/beyonder-config/src/: config.rs  lib.rs  theme.rs
crates/beyonder-core/: Cargo.toml
crates/beyonder-core/src/: agent.rs  block.rs  capability.rs  lib.rs  provenance.rs  session.rs  tui.rs
crates/beyonder-gpu/: Cargo.toml
crates/beyonder-gpu/src/: lib.rs  pipeline.rs  renderer.rs  viewport.rs
crates/beyonder-remote/: Cargo.toml
crates/beyonder-remote/src/: lib.rs  pairing.rs  protocol.rs  server.rs
crates/beyonder-runtime/: Cargo.toml
crates/beyonder-runtime/src/: capability_broker.rs  lib.rs  supervisor.rs
crates/beyonder-store/: Cargo.toml
crates/beyonder-store/src/: block_store.rs  lib.rs  migrations.rs  session_store.rs
crates/beyonder-terminal/: Cargo.toml
crates/beyonder-terminal/src/: block_builder.rs  lib.rs  pty.rs  shell_hooks.rs  term_grid.rs
crates/beyonder-ui/: Cargo.toml
crates/beyonder-ui/src/: app.rs  commands.rs  history.rs  input_editor.rs  (+2 more)
macos/: Info.plist.template
scripts/: bundle-macos-app.sh  publish.sh
src/: main.rs
(+12 files in other folders)
