[package]
name = "beyonder-acp"
version.workspace = true
edition.workspace = true

[dependencies]
beyonder-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
